Add Q20 GCD problem and AI/ML career statement

--- a/week1/day1/20python_problem.ipynb
+++ b/week1/day1/20python_problem.ipynb
@@ -631,12 +631,45 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Q20. Find GCD (Greatest Common Divisor) of Two Numbers\n",
+        "\n",
+        "def gcd(a, b):\n",
+        "    while b:\n",
+        "        a, b = b, a % b\n",
+        "    return a\n",
+        "\n",
+        "num1 = 48\n",
+        "num2 = 18\n",
+        "\n",
+        "result = gcd(num1, num2)\n",
+        "print(f\"GCD of {num1} and {num2} is: {result}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Why I want to build a career in AI/ML?\n",
+        "\n",
+        "AI/ML is not just building models; it's about solving problems that previously were hard to solve via traditional computing. I see AI/ML not just as a career, but as a chance to work on problems that can actually change how the world works. \n",
+        "\n",
+        "Think about it—if people like Sam Altman hadn't taken the risk to explore and develop AI technologies, we wouldn't have LLMs like ChatGPT today. These tools are now changing how millions of people work, learn, and solve problems. \n",
+        "\n",
+        "I want to be part of creating the next wave of AI innovations that make a real difference in people's lives. Even if the impact isn't clear today, I believe the work we do in AI/ML now could become the foundation for tomorrow's breakthroughs."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "EPWLEk-mrpLQ"
       },
-      "source": [],
       "outputs": [],
-      "execution_count": null
+      "source": []
     }
   ],
   "metadata": {
