Add reflection: Why I want to become an AI Engineer

--- a/week-1/day-1-assignment-1/assignment-1.ipynb
+++ b/week-1/day-1-assignment-1/assignment-1.ipynb
@@ -647,6 +647,33 @@
     "\n",
     "print(\"GCD:\", a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question: Why do we want to become an AI Engineer?\n",
+    "\n",
+    "**Answer:**\n",
+    "\n",
+    "I want to become an AI Engineer because:\n",
+    "\n",
+    "1. **Passion for Technology**: AI is transforming every industry and I want to be part of this revolutionary change.\n",
+    "\n",
+    "2. **Problem Solving**: AI allows us to solve complex real-world problems in healthcare, education, finance, and more.\n",
+    "\n",
+    "3. **Innovation**: The field of AI is constantly evolving with new techniques, models, and applications being developed every day.\n",
+    "\n",
+    "4. **Impact**: AI has the potential to make a significant positive impact on society by automating tasks, making better predictions, and helping humans make informed decisions.\n",
+    "\n",
+    "5. **Career Growth**: AI engineering offers excellent career opportunities with growing demand across industries worldwide.\n",
+    "\n",
+    "6. **Continuous Learning**: The field requires constant learning and adaptation, which keeps the work exciting and challenging.\n",
+    "\n",
+    "7. **Creative Expression**: Building AI models involves both analytical thinking and creativity in designing solutions.\n",
+    "\n",
+    "My goal is to develop intelligent systems that can improve people's lives and contribute to technological advancement in meaningful ways."
+   ]
   }
  ],
  "metadata": {
