Week 1 Day 2 Assignment Submission

--- a/week-1/day-2-assignment/assignment1.ipynb
+++ b/week-1/day-2-assignment/assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "86eb08a5",
    "metadata": {},
    "outputs": [
@@ -82,55 +82,63 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load dataset\n",
+    "# ---------------- DISPLAY SETTINGS ----------------\n",
+    "pd.set_option(\"display.width\", 120)\n",
+    "pd.set_option(\"display.max_colwidth\", 30)\n",
+    "\n",
+    "# ---------------- LOAD DATASET ----------------\n",
     "df = pd.read_csv(\"netflix_titles.csv\")\n",
     "\n",
-    "print(\"\\nSAMPLE DATA \")\n",
-    "print(df.head(5).to_string(index=False))\n",
+    "# ---------------- SAMPLE DATA (CLEAN TABLE) ----------------\n",
+    "print(\"\\n================ SAMPLE DATA =================\")\n",
+    "sample_cols = ['show_id', 'type', 'title', 'country', 'release_year', 'listed_in']\n",
+    "print(df[sample_cols].head(5).to_string(index=False))\n",
     "\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "# 1. Top 10 Most Frequent Genres\n",
+    "# --------------------------------------------------\n",
     "genres = df['listed_in'].dropna().str.split(', ')\n",
     "genres_exploded = genres.explode()\n",
     "\n",
     "top_10_genres = genres_exploded.value_counts().head(10)\n",
     "\n",
-    "print(\"\\n TOP 10 GENRES\")\n",
+    "print(\"\\n================ TOP 10 GENRES =================\")\n",
     "print(top_10_genres.to_frame(name=\"Count\").to_string())\n",
     "\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "# 2. Movies vs TV Shows Distribution\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "movies_vs_tv = df['type'].value_counts()\n",
     "\n",
-    "print(\"\\n MOVIES vs TV SHOWS \")\n",
+    "print(\"\\n============= MOVIES vs TV SHOWS ==============\")\n",
     "print(movies_vs_tv.to_frame(name=\"Count\").to_string())\n",
     "\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "# 3. Content Added Per Year\n",
+    "# --------------------------------------------------\n",
     "df['date_added'] = pd.to_datetime(df['date_added'], errors='coerce')\n",
     "df['year_added'] = df['date_added'].dt.year\n",
     "\n",
     "content_per_year = df['year_added'].value_counts().sort_index()\n",
     "\n",
-    "print(\"\\n CONTENT ADDED PER YEAR \")\n",
+    "print(\"\\n============= CONTENT ADDED PER YEAR =============\")\n",
     "print(content_per_year.to_frame(name=\"Titles Added\").to_string())\n",
     "\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "# 4. Country Producing Most Content\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "countries = df['country'].dropna().str.split(', ')\n",
     "countries_exploded = countries.explode()\n",
     "\n",
     "top_country = countries_exploded.value_counts().head(10)\n",
     "\n",
-    "print(\"\\nTOP CONTENT PRODUCING COUNTRIES\")\n",
+    "print(\"\\n=========== TOP CONTENT PRODUCING COUNTRIES ===========\")\n",
     "print(top_country.to_frame(name=\"Count\").to_string())\n",
     "\n",
-    "\n",
+    "# --------------------------------------------------\n",
     "# SUMMARY\n",
-    "\n",
-    "print(\"\\n SUMMARY \")\n",
+    "# --------------------------------------------------\n",
+    "print(\"\\n==================== SUMMARY ====================\")\n",
     "print(f\"Top Genre                : {top_10_genres.index[0]}\")\n",
     "print(f\"Most Common Content Type : {movies_vs_tv.idxmax()}\")\n",
     "print(f\"Year with Most Additions : {int(content_per_year.idxmax())}\")\n",
