--- a/week-1/day-1-assignment/assignment-1.ipynb
+++ b/week-1/day-1-assignment/assignment-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df3fa19b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3e838936",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4fdaf103",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "994acd53",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "#Box Visualization)\n",
+    "#Box Visualization\n",
     "plt.figure(figsize=(8,3))\n",
     "plt.boxplot(filtered_prices, vert=False)\n",
     "plt.title(\"Box Plot of House Prices\")\n",
