--- a/week-1/day-3-assignment/assignment-1.ipynb
+++ b/week-1/day-3-assignment/assignment-1.ipynb
@@ -15,13 +15,240 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Your code here"
+        "import numpy as np\n",
+        "import pandas as pd\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   CustomerID   Age  Gender  Tenure  Usage Frequency  Support Calls  \\\n",
+            "0         2.0  30.0  FEMALE    39.0             14.0            5.0   \n",
+            "1         3.0  65.0       f    49.0              1.0           10.0   \n",
+            "2         4.0  55.0  female    14.0              4.0            6.0   \n",
+            "3         5.0  58.0    MALE    38.0             21.0            7.0   \n",
+            "4         6.0  23.0       m    32.0             20.0            5.0   \n",
+            "\n",
+            "   Payment Delay Subscription Type Contract Length  Total Spend  \\\n",
+            "0           18.0          Standard          Annual        932.0   \n",
+            "1            8.0             Basic         Monthly        557.0   \n",
+            "2           18.0             Basic       Quarterly        185.0   \n",
+            "3            7.0          Standard         Monthly        396.0   \n",
+            "4            8.0             Basic         Monthly        617.0   \n",
+            "\n",
+            "   Last Interaction  Churn  \n",
+            "0              17.0    1.0  \n",
+            "1               6.0    1.0  \n",
+            "2               3.0    1.0  \n",
+            "3              29.0    1.0  \n",
+            "4              20.0    1.0  \n",
+            "(449650, 12)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Load the saved messy CSV\n",
+        "from pathlib import Path\n",
+        "\n",
+        "messy_csv_path = Path(r\"C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_messy.csv\")\n",
+        "\n",
+        "messy_loaded = pd.read_csv(messy_csv_path)\n",
+        "print(messy_loaded.head())\n",
+        "print(messy_loaded.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Missing values per column:\n",
+            " Age                  30860\n",
+            "CustomerID               1\n",
+            "Gender                   1\n",
+            "Tenure                   1\n",
+            "Usage Frequency          1\n",
+            "Support Calls            1\n",
+            "Payment Delay            1\n",
+            "Subscription Type        1\n",
+            "Contract Length          1\n",
+            "Total Spend              1\n",
+            "Last Interaction         1\n",
+            "Churn                    1\n",
+            "dtype: int64\n",
+            "Duplicate rows: 8378\n",
+            "Gender values (sample):\n",
+            " Gender\n",
+            "male    51236\n",
+            "m       51117\n",
+            "Male    51027\n",
+            "M       50992\n",
+            "MALE    50940\n",
+            "Name: count, dtype: int64\n",
+            "Total Spend range: 100.0 to 19998.4\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Basic checks on messy dataset\n",
+        "messy_df = messy_loaded.copy()\n",
+        "\n",
+        "print(\"Missing values per column:\\n\", messy_df.isna().sum().sort_values(ascending=False))\n",
+        "print(\"Duplicate rows:\", messy_df.duplicated().sum())\n",
+        "print(\"Gender values (sample):\\n\", messy_df[\"Gender\"].value_counts().head())\n",
+        "print(\"Total Spend range:\", messy_df[\"Total Spend\"].min(), \"to\", messy_df[\"Total Spend\"].max())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cleaning done.\n",
+            "Rows after cleaning: 441272\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Cleaning steps\n",
+        "clean_df = messy_df.copy()\n",
+        "\n",
+        "# 1) Handle missing Age values (fill with median)\n",
+        "age_median = clean_df[\"Age\"].median()\n",
+        "clean_df[\"Age\"] = clean_df[\"Age\"].fillna(age_median)\n",
+        "\n",
+        "# 2) Standardize Gender values\n",
+        "clean_df[\"Gender\"] = clean_df[\"Gender\"].astype(str).str.strip().str.lower()\n",
+        "clean_df[\"Gender\"] = clean_df[\"Gender\"].replace({\n",
+        "    \"m\": \"male\",\n",
+        "    \"male\": \"male\",\n",
+        "    \"f\": \"female\",\n",
+        "    \"female\": \"female\"\n",
+        "})\n",
+        "\n",
+        "# 3) Remove duplicate rows\n",
+        "clean_df = clean_df.drop_duplicates()\n",
+        "\n",
+        "# 4) Handle salary outliers (Total Spend) using IQR clipping\n",
+        "Q1 = clean_df[\"Total Spend\"].quantile(0.25)\n",
+        "Q3 = clean_df[\"Total Spend\"].quantile(0.75)\n",
+        "IQR = Q3 - Q1\n",
+        "lower = Q1 - 1.5 * IQR\n",
+        "upper = Q3 + 1.5 * IQR\n",
+        "clean_df[\"Total Spend\"] = clean_df[\"Total Spend\"].clip(lower, upper)\n",
+        "\n",
+        "print(\"Cleaning done.\")\n",
+        "print(\"Rows after cleaning:\", len(clean_df))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Missing values after cleaning:\n",
+            " CustomerID           1\n",
+            "Tenure               1\n",
+            "Support Calls        1\n",
+            "Usage Frequency      1\n",
+            "Contract Length      1\n",
+            "Total Spend          1\n",
+            "Payment Delay        1\n",
+            "Subscription Type    1\n",
+            "Last Interaction     1\n",
+            "Churn                1\n",
+            "Gender               0\n",
+            "Age                  0\n",
+            "dtype: int64\n",
+            "Duplicate rows after cleaning: 0\n",
+            "Gender values after cleaning:\n",
+            " Gender\n",
+            "male      250492\n",
+            "female    190779\n",
+            "nan            1\n",
+            "Name: count, dtype: int64\n",
+            "Total Spend range after cleaning: 100.0 to 1361.7375000000002\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Verify after cleaning\n",
+        "print(\"Missing values after cleaning:\\n\", clean_df.isna().sum().sort_values(ascending=False))\n",
+        "print(\"Duplicate rows after cleaning:\", clean_df.duplicated().sum())\n",
+        "print(\"Gender values after cleaning:\\n\", clean_df[\"Gender\"].value_counts())\n",
+        "print(\"Total Spend range after cleaning:\", clean_df[\"Total Spend\"].min(), \"to\", clean_df[\"Total Spend\"].max())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saved cleaned dataset to: C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_cleaned.csv\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Save cleaned dataset\n",
+        "clean_output_path = Path(r\"C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_cleaned.csv\")\n",
+        "clean_df.to_csv(clean_output_path, index=False)\n",
+        "print(\"Saved cleaned dataset to:\", clean_output_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
