--- a/week-1/day-3-assignment/assignment-1.ipynb
+++ b/week-1/day-3-assignment/assignment-1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "18e95c44",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "21c1291d",
    "metadata": {},
    "outputs": [],
@@ -75,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35f96aa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After removing outliers: (436778, 12)\n"
+     ]
+    }
+   ],
    "source": [
     "#Handle Salary Outliers\n",
     "Q1 = df['Total Spend'].quantile(0.25)\n",
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7d5d17e8",
    "metadata": {},
    "outputs": [],
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a49dc9b8",
    "metadata": {},
    "outputs": [],
@@ -122,10 +130,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "da7143d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 436778 entries, 0 to 449643\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                      Non-Null Count   Dtype  \n",
+      "---  ------                      --------------   -----  \n",
+      " 0   CustomerID                  436778 non-null  float64\n",
+      " 1   Age                         436778 non-null  float64\n",
+      " 2   Gender                      436778 non-null  float64\n",
+      " 3   Tenure                      436778 non-null  float64\n",
+      " 4   Usage Frequency             436778 non-null  float64\n",
+      " 5   Support Calls               436778 non-null  float64\n",
+      " 6   Payment Delay               436778 non-null  float64\n",
+      " 7   Total Spend                 436778 non-null  float64\n",
+      " 8   Last Interaction            436778 non-null  float64\n",
+      " 9   Churn                       0 non-null       float64\n",
+      " 10  Subscription Type_Premium   436778 non-null  bool   \n",
+      " 11  Subscription Type_Standard  436778 non-null  bool   \n",
+      " 12  Contract Length_Monthly     436778 non-null  bool   \n",
+      " 13  Contract Length_Quarterly   436778 non-null  bool   \n",
+      "dtypes: bool(4), float64(10)\n",
+      "memory usage: 38.3 MB\n",
+      "None\n",
+      "CustomerID                         0\n",
+      "Age                                0\n",
+      "Gender                             0\n",
+      "Tenure                             0\n",
+      "Usage Frequency                    0\n",
+      "Support Calls                      0\n",
+      "Payment Delay                      0\n",
+      "Total Spend                        0\n",
+      "Last Interaction                   0\n",
+      "Churn                         436778\n",
+      "Subscription Type_Premium          0\n",
+      "Subscription Type_Standard         0\n",
+      "Contract Length_Monthly            0\n",
+      "Contract Length_Quarterly          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "#Dataset Check\n",
     "print(df.info())\n",
@@ -134,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "06642fbf",
    "metadata": {},
    "outputs": [],
@@ -145,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9158e6b5",
    "metadata": {},
    "outputs": [],
@@ -155,25 +207,6 @@
     "\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "820802dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Train–Test Split\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_scaled,\n",
-    "    y,\n",
-    "    test_size=0.2,\n",
-    "    random_state=42,\n",
-    "    stratify=y\n",
-    ")\n"
    ]
   }
  ],
