summary of missing values

--- a/week-1/day-3-assignment/assignment-1.ipynb
+++ b/week-1/day-3-assignment/assignment-1.ipynb
@@ -26,6 +26,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "3e4135e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Missing values per column:\n",
+      "\n",
+      "CustomerID               1\n",
+      "Age                  30860\n",
+      "Gender                   1\n",
+      "Tenure                   1\n",
+      "Usage Frequency          1\n",
+      "Support Calls            1\n",
+      "Payment Delay            1\n",
+      "Subscription Type        1\n",
+      "Contract Length          1\n",
+      "Total Spend              1\n",
+      "Last Interaction         1\n",
+      "Churn                    1\n",
+      "dtype: int64\n",
+      " Number of duplicate rows:\n",
+      "8378\n",
+      " Gender values (sample):\n",
+      "Gender\n",
+      "male      51236\n",
+      "m         51117\n",
+      "Male      51027\n",
+      "M         50992\n",
+      "MALE      50940\n",
+      "F         39120\n",
+      "female    39087\n",
+      "Female    38767\n",
+      "FEMALE    38727\n",
+      "f         38636\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"customer_churn_messy (1).csv\")\n",
+    "\n",
+    "print(\" Missing values per column:\\n\")\n",
+    "print(df.isna().sum()[df.isna().sum() > 0])\n",
+    "print(\" Number of duplicate rows:\")\n",
+    "print(df.duplicated().sum())\n",
+    "print(\" Gender values (sample):\")\n",
+    "print(df[\"Gender\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a573e1c8",
    "metadata": {},
