Day-3: save final cleaned CSV and update notebook

--- a/week-1/day-3-assignment/assignment-1.ipynb
+++ b/week-1/day-3-assignment/assignment-1.ipynb
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -215,6 +215,71 @@
         "clean_output_path = Path(r\"C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_cleaned.csv\")\n",
         "clean_df.to_csv(clean_output_path, index=False)\n",
         "print(\"Saved cleaned dataset to:\", clean_output_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "After full clean:\n",
+            "CustomerID           0\n",
+            "Age                  0\n",
+            "Gender               0\n",
+            "Tenure               0\n",
+            "Usage Frequency      0\n",
+            "Support Calls        0\n",
+            "Payment Delay        0\n",
+            "Subscription Type    0\n",
+            "Contract Length      0\n",
+            "Total Spend          0\n",
+            "Last Interaction     0\n",
+            "Churn                0\n",
+            "dtype: int64\n",
+            "Rows after full clean: 441271\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Full clean: fix \"nan\" string in Gender and handle remaining missing values\n",
+        "\n",
+        "# Convert literal \"nan\" string back to NaN\n",
+        "clean_df[\"Gender\"] = clean_df[\"Gender\"].replace(\"nan\", np.nan)\n",
+        "\n",
+        "# Fill missing Gender with mode\n",
+        "if clean_df[\"Gender\"].isna().any():\n",
+        "    clean_df[\"Gender\"] = clean_df[\"Gender\"].fillna(clean_df[\"Gender\"].mode()[0])\n",
+        "\n",
+        "# Drop any remaining rows with missing values (if any)\n",
+        "clean_df = clean_df.dropna()\n",
+        "\n",
+        "print(\"After full clean:\")\n",
+        "print(clean_df.isna().sum().sort_values(ascending=False))\n",
+        "print(\"Rows after full clean:\", len(clean_df))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saved fully cleaned dataset to: C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_cleaned_final.csv\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Save the fully cleaned dataset as a new file\n",
+        "final_clean_path = Path(r\"C:\\Users\\My-Pc\\Desktop\\cepiaLabIntern\\week1\\day1\\interns_ai_ml_assignments\\week-1\\day-3-assignment\\customer_churn_cleaned_final.csv\")\n",
+        "clean_df.to_csv(final_clean_path, index=False)\n",
+        "print(\"Saved fully cleaned dataset to:\", final_clean_path)"
       ]
     }
   ],
