Student performance data visualization project

--- a/week-1/day-3-assignment/assignment-1.ipynb
+++ b/week-1/day-3-assignment/assignment-1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "3e4135e3",
    "metadata": {},
    "outputs": [
@@ -68,6 +68,7 @@
     }
    ],
    "source": [
+    "# Summary of missing values\n",
     "df = pd.read_csv(\"customer_churn_messy (1).csv\")\n",
     "\n",
     "print(\" Missing values per column:\\n\")\n",
