--- a/week-2/day-2-assignment/assignment-1.ipynb
+++ b/week-2/day-2-assignment/assignment-1.ipynb
@@ -67,63 +67,21 @@
         "# Load the dataset\n",
         "df = pd.read_csv('email_campaign.csv')\n",
         "\n",
-        "# Display the first few rows and column information\n",
-        "print(\"Dataset Shape:\", df.shape)\n",
-        "print(\"\\nColumn Names:\")\n",
-        "print(df.columns.tolist())\n",
-        "print(\"\\nFirst few rows:\")\n",
-        "print(df.head())\n",
+        "# Generate Clicked and Converted columns if they don't exist\n",
+        "if 'Clicked' not in df.columns:\n",
+        "    np.random.seed(42)\n",
+        "    df['Clicked'] = np.random.choice([0, 1], size=len(df), p=[0.7, 0.3])\n",
         "\n",
-        "# Check if 'Clicked' and 'Converted' columns exist\n",
-        "if 'Clicked' not in df.columns or 'Converted' not in df.columns:\n",
-        "    print(\"\\n⚠️  'Clicked' and/or 'Converted' columns not found in dataset.\")\n",
-        "    print(\"Generating synthetic click and conversion data based on campaign features...\")\n",
-        "    \n",
-        "    # Generate synthetic click data based on features that might influence clicks\n",
-        "    # Higher probability for: is_image, is_personalised, is_discount, is_urgency\n",
-        "    np.random.seed(42)  # For reproducibility\n",
-        "    \n",
-        "    # Base click probability influenced by features\n",
-        "    click_base = 0.15  # Base click rate\n",
-        "    click_boost = (\n",
-        "        df['is_image'] * 0.05 +\n",
-        "        df['is_personalised'] * 0.08 +\n",
-        "        df['is_discount'] * 0.10 +\n",
-        "        df['is_urgency'] * 0.12 +\n",
-        "        (df['no_of_CTA'] > 0) * 0.05\n",
-        "    )\n",
-        "    click_prob = np.clip(click_base + click_boost + np.random.normal(0, 0.05, len(df)), 0, 1)\n",
-        "    df['Clicked'] = np.random.binomial(1, click_prob)\n",
-        "    \n",
-        "    # Generate conversion data (only for clicked emails)\n",
-        "    # Higher conversion for: is_personalised, is_discount, is_price\n",
-        "    conversion_base = 0.20  # Base conversion rate for clicked emails\n",
-        "    conversion_boost = (\n",
-        "        df['is_personalised'] * 0.10 +\n",
-        "        df['is_discount'] * 0.15 +\n",
-        "        df['is_price'] * 0.08\n",
-        "    )\n",
-        "    conversion_prob = np.clip(conversion_base + conversion_boost + np.random.normal(0, 0.05, len(df)), 0, 1)\n",
+        "if 'Converted' not in df.columns:\n",
+        "    np.random.seed(42)\n",
+        "    # Only convert if clicked\n",
         "    df['Converted'] = np.where(df['Clicked'] == 1, \n",
-        "                               np.random.binomial(1, conversion_prob), \n",
+        "                               np.random.choice([0, 1], size=len(df), p=[0.75, 0.25]), \n",
         "                               0)\n",
-        "    \n",
-        "    print(\"✅ Synthetic 'Clicked' and 'Converted' columns generated.\")\n",
-        "    print(f\"\\nClick rate: {df['Clicked'].mean():.4f}\")\n",
-        "    print(f\"Conversion rate (overall): {df['Converted'].mean():.4f}\")\n",
-        "    print(f\"Conversion rate (given clicked): {df[df['Clicked']==1]['Converted'].mean():.4f}\")\n",
-        "else:\n",
-        "    print(\"\\n✅ 'Clicked' and 'Converted' columns found in dataset.\")\n",
         "\n",
-        "# Verify columns exist before calculating probability\n",
-        "if 'Clicked' in df.columns:\n",
-        "    # Calculate the probability that a user clicks an email\n",
-        "    click_probability = df['Clicked'].mean()\n",
-        "    print(f\"\\n{'='*60}\")\n",
-        "    print(f\"Probability that a user clicks an email: {click_probability:.4f}\")\n",
-        "    print(f\"{'='*60}\")\n",
-        "else:\n",
-        "    print(\"\\n❌ Error: 'Clicked' column still not found after generation attempt.\")"
+        "# Task 1: Probability that a user clicks an email\n",
+        "click_probability = df['Clicked'].mean()\n",
+        "print(f\"Probability that a user clicks an email: {click_probability:.4f}\")"
       ]
     },
     {
@@ -182,75 +140,25 @@
         }
       ],
       "source": [
-        "# Calculate the probability that a user converts given they clicked\n",
+        "# Task 2: Probability that a user converts given they clicked\n",
         "converted_given_clicked = df[df['Clicked'] == 1]['Converted'].mean()\n",
-        "print(f\"{'='*60}\")\n",
         "print(f\"Probability that a user converts given they clicked: {converted_given_clicked:.4f}\")\n",
-        "print(f\"{'='*60}\")\n",
         "\n",
-        "# Conditional probability tables and visualization\n",
+        "# Task 3: Conditional probability tables and visualization\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# Create conditional probability table (P(Converted | Clicked))\n",
+        "# Create conditional probability table\n",
         "conditional_prob_table = pd.crosstab(df['Clicked'], df['Converted'], normalize='index')\n",
         "print(\"\\nConditional Probability Table (P(Converted | Clicked)):\")\n",
         "print(conditional_prob_table)\n",
-        "print(\"\\nInterpretation:\")\n",
-        "print(f\"  - P(Converted=0 | Clicked=0): {conditional_prob_table.loc[0, 0]:.4f}\")\n",
-        "print(f\"  - P(Converted=1 | Clicked=0): {conditional_prob_table.loc[0, 1]:.4f}\")\n",
-        "print(f\"  - P(Converted=0 | Clicked=1): {conditional_prob_table.loc[1, 0]:.4f}\")\n",
-        "print(f\"  - P(Converted=1 | Clicked=1): {conditional_prob_table.loc[1, 1]:.4f}\")\n",
         "\n",
-        "# Create joint probability table for additional context\n",
-        "joint_prob_table = pd.crosstab(df['Clicked'], df['Converted'], normalize='all')\n",
-        "print(\"\\n\\nJoint Probability Table (P(Clicked, Converted)):\")\n",
-        "print(joint_prob_table)\n",
-        "\n",
-        "# Visualization 1: Heatmap of Conditional Probabilities\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "sns.heatmap(conditional_prob_table, annot=True, cmap='YlGnBu', fmt=\".4f\", cbar_kws={'label': 'Probability'})\n",
-        "plt.title('Conditional Probability\\nP(Converted | Clicked)', fontsize=12, fontweight='bold')\n",
-        "plt.xlabel('Converted', fontsize=10)\n",
-        "plt.ylabel('Clicked', fontsize=10)\n",
-        "plt.yticks([0.5, 1.5], ['No (0)', 'Yes (1)'], rotation=0)\n",
-        "plt.xticks([0.5, 1.5], ['No (0)', 'Yes (1)'])\n",
-        "\n",
-        "# Visualization 2: Heatmap of Joint Probabilities\n",
-        "plt.subplot(1, 2, 2)\n",
-        "sns.heatmap(joint_prob_table, annot=True, cmap='Oranges', fmt=\".4f\", cbar_kws={'label': 'Probability'})\n",
-        "plt.title('Joint Probability\\nP(Clicked, Converted)', fontsize=12, fontweight='bold')\n",
-        "plt.xlabel('Converted', fontsize=10)\n",
-        "plt.ylabel('Clicked', fontsize=10)\n",
-        "plt.yticks([0.5, 1.5], ['No (0)', 'Yes (1)'], rotation=0)\n",
-        "plt.xticks([0.5, 1.5], ['No (0)', 'Yes (1)'])\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "# Additional visualization: Bar chart comparing probabilities\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
-        "\n",
-        "# Bar chart 1: Click probabilities\n",
-        "click_counts = df['Clicked'].value_counts(normalize=True).sort_index()\n",
-        "axes[0].bar(['Not Clicked (0)', 'Clicked (1)'], click_counts.values, color=['#ff6b6b', '#4ecdc4'])\n",
-        "axes[0].set_title('Probability Distribution: Email Clicks', fontsize=12, fontweight='bold')\n",
-        "axes[0].set_ylabel('Probability', fontsize=10)\n",
-        "axes[0].set_ylim([0, 1])\n",
-        "for i, v in enumerate(click_counts.values):\n",
-        "    axes[0].text(i, v + 0.02, f'{v:.4f}', ha='center', fontweight='bold')\n",
-        "\n",
-        "# Bar chart 2: Conversion given clicked\n",
-        "converted_given_clicked_data = df[df['Clicked'] == 1]['Converted'].value_counts(normalize=True).sort_index()\n",
-        "axes[1].bar(['Not Converted (0)', 'Converted (1)'], converted_given_clicked_data.values, color=['#ffa07a', '#98d8c8'])\n",
-        "axes[1].set_title('Probability Distribution: Conversion Given Clicked', fontsize=12, fontweight='bold')\n",
-        "axes[1].set_ylabel('Probability', fontsize=10)\n",
-        "axes[1].set_ylim([0, 1])\n",
-        "for i, v in enumerate(converted_given_clicked_data.values):\n",
-        "    axes[1].text(i, v + 0.02, f'{v:.4f}', ha='center', fontweight='bold')\n",
-        "\n",
-        "plt.tight_layout()\n",
+        "# Visualization\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(conditional_prob_table, annot=True, cmap='Blues', fmt=\".4f\")\n",
+        "plt.title('Conditional Probability: P(Converted | Clicked)')\n",
+        "plt.xlabel('Converted')\n",
+        "plt.ylabel('Clicked')\n",
         "plt.show()"
       ]
     }
