--- a/interns_ai_ml_assigments/Week-1/Assignment-5/EDA_Assignment_5.ipynb
+++ b/interns_ai_ml_assigments/Week-1/Assignment-5/EDA_Assignment_5.ipynb
@@ -9,7 +9,10 @@
     {
      "data": {
       "text/plain": [
-       "['.ipynb_checkpoints', 'EDA_Assignment_5.ipynb', 'Student_performance.csv']"
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'EDA_Assignment_5.ipynb',\n",
+       " 'Student_performance.csv']"
       ]
      },
      "execution_count": 1,
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "edfdc79f-f845-4a0d-9f85-01edd8fa0184",
    "metadata": {},
    "outputs": [
@@ -614,7 +617,7 @@
        "max     32.000000   19.000000   19.000000   19.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "178420e3-7da2-473b-ab6b-48d585aa7275",
    "metadata": {},
    "outputs": [
@@ -651,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8e16a233-7e20-4acb-8c1d-03e975eb53ab",
    "metadata": {},
    "outputs": [
@@ -674,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "1d7a9c02-b697-4254-b19d-7f3e9ece3b56",
    "metadata": {},
    "outputs": [
@@ -698,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "2d8aa643-4167-4ee2-ad4c-f83d18763232",
    "metadata": {},
    "outputs": [
@@ -721,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "3ffa99f1-e963-4932-bfa6-c1dd43ce8c54",
    "metadata": {},
    "outputs": [
@@ -744,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "328d5f5a-8c96-4e4b-8475-d6dd757f9f6a",
    "metadata": {},
    "outputs": [
@@ -790,7 +793,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
