Week 2 Day 5 Submission

--- a/week-2/day-5-assignment/week2day5assignment.ipynb
+++ b/week-2/day-5-assignment/week2day5assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "a14e11d1",
    "metadata": {},
    "outputs": [],
@@ -10,11 +10,142 @@
     "import pandas as pd\n",
     "from scipy.stats import ttest_ind\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "619e5008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.read_csv(\"shopping_trends.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "aaf1f065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Discount Applied\"] = df[\"Discount Applied\"].str.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4b2ef49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discount_yes = df[df[\"Discount Applied\"] == \"Yes\"][\"Previous Purchases\"]\n",
+    "discount_no  = df[df[\"Discount Applied\"] == \"No\"][\"Previous Purchases\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dbebadd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Previous Purchases (Discount Applied): 25.74299344066786\n",
+      "Mean Previous Purchases (No Discount): 25.056230319388213\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Mean Previous Purchases (Discount Applied):\", discount_yes.mean())\n",
+    "print(\"Mean Previous Purchases (No Discount):\", discount_no.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "adf10f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_stat, p_value = ttest_ind(\n",
+    "    discount_yes,\n",
+    "    discount_no,\n",
+    "    equal_var=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ef47216b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-statistic: 1.4701173603019322\n",
+      "p-value: 0.14161709334177072\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"t-statistic:\", t_stat)\n",
+    "print(\"p-value:\", p_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "cf97ccc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a71f8eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fail to reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "if p_value <= alpha:\n",
+    "    print(\"Reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
