--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -648,7 +648,7 @@
    "id": "1b08f820-1f16-415a-94d4-95f18719d3e9",
    "metadata": {},
    "source": [
-    "Final Findings (with your analysis included)\n",
+    "Final Findings (with my analysis included)\n",
     "\n",
     "“An independent t-test was conducted to compare the monthly charges of customers who stayed with the company and those who left. The results showed a statistically significant difference between the two groups (p < 0.05). On average, customers who churned were paying higher monthly charges than retained customers.\n",
     "\n",
