--- a/week-2/day-5-assignment/assignment-1.ipynb
+++ b/week-2/day-5-assignment/assignment-1.ipynb
@@ -17,10 +17,164 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "5171bcce",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>custid</th>\n",
+              "      <th>retained</th>\n",
+              "      <th>created</th>\n",
+              "      <th>firstorder</th>\n",
+              "      <th>lastorder</th>\n",
+              "      <th>esent</th>\n",
+              "      <th>eopenrate</th>\n",
+              "      <th>eclickrate</th>\n",
+              "      <th>avgorder</th>\n",
+              "      <th>ordfreq</th>\n",
+              "      <th>paperless</th>\n",
+              "      <th>refill</th>\n",
+              "      <th>doorstep</th>\n",
+              "      <th>favday</th>\n",
+              "      <th>city</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>6H6T6N</td>\n",
+              "      <td>0</td>\n",
+              "      <td>28-09-2012</td>\n",
+              "      <td>11-08-2013</td>\n",
+              "      <td>11-08-2013</td>\n",
+              "      <td>29</td>\n",
+              "      <td>100.000000</td>\n",
+              "      <td>3.448276</td>\n",
+              "      <td>14.52</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Monday</td>\n",
+              "      <td>DEL</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>APCENR</td>\n",
+              "      <td>1</td>\n",
+              "      <td>19-12-2010</td>\n",
+              "      <td>01-04-2011</td>\n",
+              "      <td>19-01-2014</td>\n",
+              "      <td>95</td>\n",
+              "      <td>92.631579</td>\n",
+              "      <td>10.526316</td>\n",
+              "      <td>83.69</td>\n",
+              "      <td>0.181641</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Friday</td>\n",
+              "      <td>DEL</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>7UP6MS</td>\n",
+              "      <td>0</td>\n",
+              "      <td>03-10-2010</td>\n",
+              "      <td>01-12-2010</td>\n",
+              "      <td>06-07-2011</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>33.58</td>\n",
+              "      <td>0.059908</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Wednesday</td>\n",
+              "      <td>DEL</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>7ZEW8G</td>\n",
+              "      <td>0</td>\n",
+              "      <td>22-10-2010</td>\n",
+              "      <td>28-03-2011</td>\n",
+              "      <td>28-03-2011</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>54.96</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>BOM</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>8V726M</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27-11-2010</td>\n",
+              "      <td>29-11-2010</td>\n",
+              "      <td>28-01-2013</td>\n",
+              "      <td>30</td>\n",
+              "      <td>90.000000</td>\n",
+              "      <td>13.333333</td>\n",
+              "      <td>111.91</td>\n",
+              "      <td>0.008850</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Monday</td>\n",
+              "      <td>BOM</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   custid  retained     created  firstorder   lastorder  esent   eopenrate  \\\n",
+              "0  6H6T6N         0  28-09-2012  11-08-2013  11-08-2013     29  100.000000   \n",
+              "1  APCENR         1  19-12-2010  01-04-2011  19-01-2014     95   92.631579   \n",
+              "2  7UP6MS         0  03-10-2010  01-12-2010  06-07-2011      0    0.000000   \n",
+              "3  7ZEW8G         0  22-10-2010  28-03-2011  28-03-2011      0    0.000000   \n",
+              "4  8V726M         1  27-11-2010  29-11-2010  28-01-2013     30   90.000000   \n",
+              "\n",
+              "   eclickrate  avgorder   ordfreq  paperless  refill  doorstep     favday city  \n",
+              "0    3.448276     14.52  0.000000          0       0         0     Monday  DEL  \n",
+              "1   10.526316     83.69  0.181641          1       1         1     Friday  DEL  \n",
+              "2    0.000000     33.58  0.059908          0       0         0  Wednesday  DEL  \n",
+              "3    0.000000     54.96  0.000000          0       0         0   Thursday  BOM  \n",
+              "4   13.333333    111.91  0.008850          0       0         0     Monday  BOM  "
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -35,10 +189,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "e36207bc",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(30801, 15)\n",
+            "Index(['custid', 'retained', 'created', 'firstorder', 'lastorder', 'esent',\n",
+            "       'eopenrate', 'eclickrate', 'avgorder', 'ordfreq', 'paperless', 'refill',\n",
+            "       'doorstep', 'favday', 'city'],\n",
+            "      dtype='object')\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "retained\n",
+              "1    24472\n",
+              "0     6329\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Basic overview\n",
         "print(df.shape)\n",
@@ -51,10 +230,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "be56c710",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(np.float64(61.95767489375613), np.float64(61.55018802338442))"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Split groups\n",
         "retained = df[df[\"retained\"] == 1]\n",
@@ -69,10 +259,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "9fbd2c0b",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "TtestResult(statistic=np.float64(0.6901421078050171), pvalue=np.float64(0.4901215064484649), df=np.float64(9601.352732263727))"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Welch's t-test for avgorder\n",
         "avg_ttest = stats.ttest_ind(retained_avg, not_retained_avg, equal_var=False, nan_policy=\"omit\")\n",
@@ -82,10 +283,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "94edfa6c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(np.float64(0.038298768468576334),\n",
+              " np.float64(0.0355234908389951),\n",
+              " TtestResult(statistic=np.float64(1.950582794390669), pvalue=np.float64(0.05113391459158599), df=np.float64(10248.596826812807)))"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Optional: compare order frequency (ordfreq)\n",
         "retained_freq = retained[\"ordfreq\"].dropna()\n",
