--- a/week-3/day-1-assignment/assignment-1.ipynb
+++ b/week-3/day-1-assignment/assignment-1.ipynb
@@ -199,13 +199,20 @@
         "try:\n",
         "    housing_path = kagglehub.dataset_download(HOUSING_HANDLE)\n",
         "    # find CSV in the bundle\n",
-        "    csv_files = glob.glob(os.path.join(housing_path, \"**\", \"*.csv\"), recursive=True)\n",
+        "    csv_files = sorted(glob.glob(os.path.join(housing_path, \"**\", \"*.csv\"), recursive=True))\n",
         "    if not csv_files:\n",
         "        raise FileNotFoundError(\"No CSV files found in the housing dataset.\")\n",
         "\n",
+        "    print(\"Housing dataset files:\")\n",
+        "    for f in csv_files:\n",
+        "        print(\"-\", os.path.basename(f))\n",
+        "\n",
+        "    # pick the first CSV (typically the main dataset file)\n",
         "    housing_csv = csv_files[0]\n",
         "    housing_df = pd.read_csv(housing_csv)\n",
+        "    print(\"Selected file:\", os.path.basename(housing_csv))\n",
         "    print(\"Housing dataset loaded:\", housing_df.shape)\n",
+        "    print(\"Columns:\", list(housing_df.columns))\n",
         "    display(housing_df.head())\n",
         "except Exception as e:\n",
         "    print(\"Housing dataset download/load failed.\")\n",
@@ -215,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "id": "887dbb4b",
       "metadata": {},
       "outputs": [
@@ -224,14 +231,17 @@
           "output_type": "stream",
           "text": [
             "Target column: price\n",
-            "MAE: 1127483.3523235186\n"
+            "Train MAE: 853544.16151612\n",
+            "Train R2: 0.5621678833074251\n",
+            "Test MAE: 1127483.3523235186\n",
+            "Test R2: 0.5464062355495873\n"
           ]
         }
       ],
       "source": [
         "# Quick baseline regression (optional example)\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
         "if 'housing_df' in globals():\n",
@@ -250,10 +260,15 @@
         "\n",
         "    model = LinearRegression()\n",
         "    model.fit(X_train, y_train)\n",
-        "    preds = model.predict(X_test)\n",
+        "\n",
+        "    train_preds = model.predict(X_train)\n",
+        "    test_preds = model.predict(X_test)\n",
         "\n",
         "    print(\"Target column:\", target_col)\n",
-        "    print(\"MAE:\", mean_absolute_error(y_test, preds))"
+        "    print(\"Train MAE:\", mean_absolute_error(y_train, train_preds))\n",
+        "    print(\"Train R2:\", r2_score(y_train, train_preds))\n",
+        "    print(\"Test MAE:\", mean_absolute_error(y_test, test_preds))\n",
+        "    print(\"Test R2:\", r2_score(y_test, test_preds))"
       ]
     },
     {
@@ -481,6 +496,81 @@
         "\n",
         "    plt.tight_layout()\n",
         "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b3d01ff1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Improved model: handle categorical + missing values (Ridge + Gradient Boosting)\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.linear_model import Ridge\n",
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
+        "\n",
+        "if 'housing_df' in globals():\n",
+        "    # Detect target column\n",
+        "    target_candidates = [\"SalePrice\", \"price\", \"Price\", \"MEDV\"]\n",
+        "    target_col = next((c for c in target_candidates if c in housing_df.columns), None)\n",
+        "    if target_col is None:\n",
+        "        raise ValueError(\"Could not find a price column. Please set target_col manually.\")\n",
+        "\n",
+        "    X = housing_df.drop(columns=[target_col])\n",
+        "    y = housing_df[target_col]\n",
+        "\n",
+        "    # Identify column types\n",
+        "    numeric_features = X.select_dtypes(include=[\"number\"]).columns\n",
+        "    categorical_features = X.select_dtypes(exclude=[\"number\"]).columns\n",
+        "\n",
+        "    # Preprocess\n",
+        "    numeric_transformer = Pipeline(steps=[\n",
+        "        (\"imputer\", SimpleImputer(strategy=\"median\"))\n",
+        "    ])\n",
+        "\n",
+        "    categorical_transformer = Pipeline(steps=[\n",
+        "        (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
+        "        (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+        "    ])\n",
+        "\n",
+        "    preprocessor = ColumnTransformer(\n",
+        "        transformers=[\n",
+        "            (\"num\", numeric_transformer, numeric_features),\n",
+        "            (\"cat\", categorical_transformer, categorical_features),\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(\n",
+        "        X, y, test_size=0.2, random_state=42\n",
+        "    )\n",
+        "\n",
+        "    # Ridge Regression\n",
+        "    ridge_model = Pipeline(steps=[\n",
+        "        (\"preprocess\", preprocessor),\n",
+        "        (\"model\", Ridge(alpha=1.0))\n",
+        "    ])\n",
+        "    ridge_model.fit(X_train, y_train)\n",
+        "    ridge_preds = ridge_model.predict(X_test)\n",
+        "\n",
+        "    print(\"Ridge Test MAE:\", mean_absolute_error(y_test, ridge_preds))\n",
+        "    print(\"Ridge Test R2:\", r2_score(y_test, ridge_preds))\n",
+        "\n",
+        "    # Gradient Boosting Regressor\n",
+        "    gbr_model = Pipeline(steps=[\n",
+        "        (\"preprocess\", preprocessor),\n",
+        "        (\"model\", GradientBoostingRegressor(random_state=42))\n",
+        "    ])\n",
+        "    gbr_model.fit(X_train, y_train)\n",
+        "    gbr_preds = gbr_model.predict(X_test)\n",
+        "\n",
+        "    print(\"GBR Test MAE:\", mean_absolute_error(y_test, gbr_preds))\n",
+        "    print(\"GBR Test R2:\", r2_score(y_test, gbr_preds))"
       ]
     }
   ],
